--- a/PortFolio/Portfolio.html
+++ b/PortFolio/Portfolio.html
@@ -401,7 +401,7 @@
 
                     <a href="https://www.linkedin.com/in/rajput-deepak-72a406210/"><h4>Linkdin</h4></a>
 
-                    <a href="./Latex_Resume_Template (1).pdf"><h4>Resume</h4></a>
+                    <a href="./Latex_Resume_Template.pdf"><h4>Resume</h4></a>
 
                     <button id="b2">
                         <i  class="fa-solid fa-burger" id="Burger2"></i>
