--- a/Myntra_clone/Sign_up_form.html
+++ b/Myntra_clone/Sign_up_form.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myntra login page</title>
+<link rel="shortcut icon" href="./Images/myntra3.png" type="image/x-icon">
+
     <style>
         body {
 
@@ -113,7 +115,7 @@
             document.getElementById("madha").innerHTML="";
             
             localStorage.setItem('key1',data1)
-
+            console.log(data1);
         }
        }
     </script>
