--- a/Myntra_clone/Wishlist.html
+++ b/Myntra_clone/Wishlist.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>checkname2</title>
+    <title>Wishlist</title>
+<link rel="shortcut icon" href="./Images/myntra3.png" type="image/x-icon">
+
     <style>
         #p1
         {
@@ -95,8 +97,9 @@
 
             btn2.addEventListener('click',function ()
              {
-                console.log('hii'); 
-                div1.remove();   
+                // div1.remove();
+                div1.removeChild('data1');
+                console.log('hii');
             })
             }
 
