myntra Clone changes

--- a/Myntra_clone/Main.html
+++ b/Myntra_clone/Main.html
@@ -31,8 +31,8 @@
             <li><a href="./T-shirt_cards.html" target="_blank">tshirt</a></li>
             <li><a href="./Casual_shirts.html" target="_blank"> Casual shirt</a></li>
             <li><a href="./Jackets.html" target="_blank">Jackets</a></li>
-            <li><a href="./project/Jeans.html" target="_blank">Jeans</a></li>
-            <li><a href="./project/Suit.html" target="_blank">Suit</a></li>
+            <li><a href="./Jeans.html" target="_blank">Jeans</a></li>
+            <li><a href="./Suit.html" target="_blank">Suit</a></li>
           </ul>
         </li>
         <li href="" onclick="dropDownWomen()">
@@ -41,8 +41,8 @@
             <li><a href="./T-shirt_cards.html" target="_blank">tshirt</a></li>
             <li><a href="./Casual_shirts.html" target="_blank"> Casual shirt</a></li>
             <li><a href="./Jackets.html" target="_blank">Jackets</a></li>
-            <li><a href="./project/Jeans.html" target="_blank">Jeans</a></li>
-            <li><a href="./project/Suit.html" target="_blank">Suit</a></li>
+            <li><a href="./Jeans.html" target="_blank">Jeans</a></li>
+            <li><a href="./Suit.html" target="_blank">Suit</a></li>
           </ul>
         </li>
         <li href="" onclick="dropDownKids()">
@@ -51,8 +51,8 @@
             <li><a href="./T-shirt_cards.html" target="_blank">tshirt</a></li>
             <li><a href="./Casual_shirts.html" target="_blank"> Casual shirt</a></li>
             <li><a href="./Jackets.html" target="_blank">Jackets</a></li>
-            <li><a href="./project/Jeans.html" target="_blank">Jeans</a></li>
-            <li><a href="./project/Suit.html" target="_blank">Suit</a></li>
+            <li><a href="./Jeans.html" target="_blank">Jeans</a></li>
+            <li><a href="./Suit.html" target="_blank">Suit</a></li>
           </ul>
         </li>
         <li href="" target="_blank">HOME&LIVING</li>
@@ -73,8 +73,8 @@
              <li><a href="./T-shirt_cards.html" target="_blank">tshirt</a></li>
             <li><a href="./Casual_shirts.html" target="_blank"> Casual shirt</a></li>
             <li><a href="./Jackets.html" target="_blank">Jackets</a></li>
-            <li><a href="./project/Jeans.html" target="_blank">Jeans</a></li>
-            <li><a href="./project/Suit.html" target="_blank">Suit</a></li>
+            <li><a href="./Jeans.html" target="_blank">Jeans</a></li>
+            <li><a href="./Suit.html" target="_blank">Suit</a></li>
             <li><a href="./Sign_up_form.html" target="_blank">Log in</a></li>
             <li onclick="LogOut()">Log Out</li>
           </ul>
