--- a/Myntra_clone/Wishlist.html
+++ b/Myntra_clone/Wishlist.html
@@ -88,6 +88,8 @@
              </div>
              </div>
              `;
+
+             console.log(data1);
              
              div1.innerHTML=element1;
 
@@ -99,7 +101,6 @@
              {
                 // div1.remove();
                 div1.removeChild('data1');
-                console.log('hii');
             })
             }
 
