--- a/BrowseInfo/Index.html
+++ b/BrowseInfo/Index.html
@@ -726,7 +726,7 @@
         </div>
     </header>
 
-    <footer class="p-5">
+    <footer>
         
         <div class="wrapper">
             <ul>
